tests/errors/match_missing_bit.vir
// MatchCoverage: Bit subject with only `case true`, no `false`.

mod MissingBitCase {
    incoming b : Bit async

    outgoing out : Bit async

    // CHECK: Non-exhaustive match on Bit: not covered: false
    out := match b {
        case true => false
    }
}

// CHECK: Check failed
